criacao de tutoriais

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto de Formação - HTML e CSS</title>
     <link rel="stylesheet" href="styles.css" />
+    <!-- NÃO MEXER ACIMA DESTA LINHA -->
+    <title>Projeto de Formação - HTML e CSS</title>
   </head>
   <body>
     <header>
@@ -30,6 +31,7 @@
       <p>&copy; 2025 Projeto de Formação - Todos os direitos reservados.</p>
     </footer>
   </body>
+  <!-- NÃO MEXER ABAIXO DESTA LINHA -->
   <script>
     // Seleciona o formulário e adiciona um ouvinte de evento para o envio
     const formulario = document.querySelector("form");
